--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body, html {
 body {
   margin: 0;
   font-size: 100%;
-  background: rgb(255, 99, 71, 0.82);
+  background: rgba(255, 99, 71, 0.82);
   font-family: Georgia, serif;
   /* lets the fonts look a bit better */
   -webkit-font-smoothing: antialiased;
@@ -87,7 +87,7 @@ ul li {
 
 /* Arrows */
 .arrows {
-  color: rgb(127, 140, 141, 0.62);
+  color: rgba(127, 140, 141, 0.62);
   width: 1em;
   height: 1em;
   position: absolute;
@@ -109,6 +109,7 @@ ul li {
   right: 10px;
 }
 
+/*arrows light up when clicked but do not transition */
 .prev:active, .next:active {
   color: white;
 }
